# website

./: .dockerignore  .env.daniel  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  Django 1.8 migration instructions.txt  Dockerfile  Dockerfile-legacy  README.md  cinit.yml  dashboard.py  docker-compose-dev.yml  docker-compose-new.yml  docker-compose-no-django.yml  docker-compose-production-new.yml  docker-compose-production-no_ssl.yml  docker-compose-production.yml  docker-compose.test.yml  docker-compose.yml  docker-compose_sftp-test.yml  docker-entrypoint.sh  env_variables.yml  fabfile.py  gulpfile.js  manage.py  map-envvars.sh  mkdocs.yml  package.json  pre-start.sh  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  reset.sql  sip.yml  variables.yml
accounts/: models.py
auditing/: __init__.py  admin.py  apps.py  models.py  signals.py
cms_plugins/: cms_plugins.py
configurations/: .env-template  .env_test  dev-overrides.yml  dockerfile  dockerfile-new  dockerfile-new~  gunicorn.py  gunicorn_conf.py  maintenance-template.conf  nginx-no_ssl.conf  nginx-ssl.conf  python-requirements-extra-readthedocs.txt  python-requirements.txt  supervisord.conf  tq_website-no_ssl.template  tq_website.conf  tq_website.template
counterpayment/: forms.py  views.py
courses/: admin.py  admin_actions.py  admin_views.py  apps.py  cms_app.py  cms_apps.py  cms_plugins.py  cms_toolbar.py  cms_toolbars.py  emailcenter.py  filters.py  forms.py  managers.py  models.py  services.py  signals.py  tests.py  urls.py  views.py
djangocms_4_migration/: apps.py  helpers.py  models.py
dockerfiles/: django  js
docs/: developers.md  index.md
email_system/: apps.py  urls.py  views.py
email_templates/: README.md  move_to_waiting_list.txt  online_payment_successful.txt  participation_confirmation_with_partner.txt  participation_confirmation_without_partner.txt  participation_confirmation_without_partner_nocouple.txt  payment_reminder.txt  rejection_banned.txt  rejection_course_cancelled.txt  rejection_illegitimate.txt  rejection_no_partner.txt  rejection_overbooked.txt  rejection_requirements_not_met.txt  rejection_unknown.txt  rejection_user_cancelled.txt  subscription_confirmation_with_partner.txt  subscription_confirmation_with_partner_waiting_list.txt  subscription_confirmation_without_partner.txt  subscription_confirmation_without_partner_nocouple.txt  subscription_confirmation_without_partner_nocouple_waiting_list.txt  subscription_confirmation_without_partner_waiting_list.txt  survey_invitation.txt  teacher_course_cancelled.txt  teacher_course_presence_reminder.txt  teacher_submit_course_presence.txt  teacher_welcome.txt  unexcused_absence.txt  voucher.html
events/: admin.py  admin_actions.py  cms_apps.py  cms_plugins.py  cms_toolbar.py  cms_toolbars.py  ical.py  managers.py  models.py  services.py  tasks.py  urls.py  views.py
faq/: admin.py  cms_plugins.py  managers.py  models.py  urls.py  views.py
fixtures/: auth.user.json  cms.json  events.json
groups/: apps.py
loadtesting/: README.md  locustfile.py  requirements.txt
organisation/: admin.py  cms_plugins.py  cms_toolbar.py  managers.py  models.py  urls.py  views.py
partners/: apps.py  urls.py
payment/: admin.py  admin_actions.py  cms_toolbars.py  converters.py  filters.py  forms.py  models.py  payment_processor.py  postfinance_connector.py  services.py  tests.py  urls.py  views.py  vouchergenerator.py
scripts/: .env  build_doc.sh  certbot.sh  check_cms.sh  cms_fix-tree.sh  (+33 more)
(+1189 files in other folders)
